--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
             </div>
             <br></br>
             <br></br>
-            
+
                 <h1>Interaction avec le clavier</h1>
                 <div class="exemple"></div>
                 <h2>Saisie clavier</h2>
@@ -115,9 +115,15 @@
 
                 <h1>Multimédia</h1>
                 <div class="exemple"></div>
-                <h2>la video</h2>
+                <h2>La Video</h2>
                 <p>Exemple d'un puzzle video, utiliser le glisser déposer pour déplacer les morceaux du puzzle.</p>
                 <div id="exemple12Container"></div>
+                <br></br>
+
+                <div class="exemple"></div>
+                <h2>Le Son</h2>
+                <p>@arialabel. Two grey circles on a light grey background that move as the user moves their mouse and plays different noises based on their distance from each other </p>
+                <div id="exemple13Container"></div>
                 <br></br>
 
   
@@ -133,6 +139,7 @@
   <script src="exemple10.js"></script>
   <script src="exemple11.js"></script>
   <script src="exemple12.js"></script>
+  <script src="exemple13.js"></script>
 
 </body>
 </html>
