--- a/index.html
+++ b/index.html
@@ -337,8 +337,8 @@
   
   <br /><br />
 
-    <!-- Section : Travaux Personnel -->
-    <h2>TRAVAUX PERSONNEL</h2>
+    <!-- Section : Travaux Personnels -->
+    <h2>Travaux Ppersonnels</h2>
     <p>Travaux d'étude sur le web interactif développés ces dernières années.</p>
     
     <!-- Exemple de Travail 1 : La Compagnie des Ombres -->
@@ -381,6 +381,13 @@
     <p>Le projet incorpore de l'interaction avec IA.</p>
     
     <br /><br />
+
+   <h2>Liens utiles</h2>
+  <br /><br />
+   <p><a href="https://archive.p5js.org/examples/" target="_blank">p5.js</a>: Librairie interactive 2D javascript</p>
+   <p><a href="https://threejs.org/"_blank">three.js</a>: Librairie interactive 3D javascript</p>
+   <p><a href="https://codepen.io/trending">codepen.io</a>: Site de partage de la communautée des programmers et webdesigner</p>
+
   
   <!-- Inclusion des scripts JavaScript -->
   <!-- Exemple 1 : Mouvement -->
